--- a/01_python/problem_set_07.ipynb
+++ b/01_python/problem_set_07.ipynb
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -55,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -98,7 +98,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -107,7 +107,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -142,7 +142,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -266,18 +266,60 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def even_and_odd(numbers):\n",
+    "    evens = []\n",
+    "    odds = []\n",
+    "    \n",
+    "    for num in numbers:\n",
+    "        if num % 2:\n",
+    "            odds.append(num)\n",
+    "        else:\n",
+    "            evens.append(num)\n",
+    "    \n",
+    "    # 중복 제거\n",
+    "    odds = list(set(odds))\n",
+    "    evens = list(set(evens))\n",
+    "    \n",
+    "    # pop을 사용하기 위해, 오름/내림차순 거꾸로 정렬\n",
+    "    odds.sort()\n",
+    "    evens.sort(reverse=True)\n",
+    "    \n",
+    "    answer = []\n",
+    "    \n",
+    "    # odds 나 evens 중 하나라도 내용물이 있다면 계속 반복\n",
+    "    while odds or evens:  \n",
+    "        if evens:\n",
+    "            even_num = evens.pop()\n",
+    "            answer.append(even_num)\n",
+    "        if odds:\n",
+    "            odd_num = odds.pop()\n",
+    "            answer.append(odd_num)\n",
+    "            \n",
+    "    return answer\n",
+    "    "
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {
     "scrolled": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[14, 17, 7, 3]\n",
+      "[11, 9, 7, 5, 3, 1]\n",
+      "[2, 11, 4, 9, 6, 1, 2004]\n"
+     ]
+    }
+   ],
    "source": [
     "# 해당 코드를 통해 올바른 결과가 나오는지 확인하세요.\n",
     "print(even_and_odd([7, 3, 14, 17]))\n",
@@ -324,16 +366,51 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def calc(code):\n",
+    "    answer = 0\n",
+    "    num_str = '0'\n",
+    "        \n",
+    "    for char in code:\n",
+    "        if char in '+-':\n",
+    "            answer += int(num_str)\n",
+    "            num_str = char\n",
+    "        else:\n",
+    "            num_str += char\n",
+    "\n",
+    "    answer += int(num_str)\n",
+    "    return answer\n"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [],
+   "source": [
+    "# eval 함수가 있다는 사실을 알려주기 위한 답안\n",
+    "def calc(code):\n",
+    "    return eval(code)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 57,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n",
+      "1212\n",
+      "0\n"
+     ]
+    }
+   ],
    "source": [
     "# 해당 코드를 통해 올바른 결과가 나오는지 확인하세요.\n",
     "print(calc('123+2-124'))\n",
